# grit-sql

./: .gitignore  SQL_GRIT_L1.csv  context.ipynb  generator.py  pyproject.toml
